searchresult fix spacing

--- a/apps/www/app/_components/search-dialog/search-dialog.module.css
+++ b/apps/www/app/_components/search-dialog/search-dialog.module.css
@@ -101,6 +101,7 @@
 
 /* Quick search result styles */
 .quickResult {
+  margin-bottom: var(--ds-size-6);
   /*Uncomment to enable transitions*/
   /*   --transition: 0.3s;
   --delay: 0.1s;
